# Halal-Filter

./: .gitignore  README.md  halal_filter.py  pyproject.toml
.github/workflows/: halal-whitelist.yml
data/: universe.csv
halal_filter/: __init__.py  cli.py  core.py
