[project]
name = "halal-filter"
version = "0.1.0"
description = "Personal-use halal stock screener (industry + ratios + CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "yfinance>=0.2.40",
  "typer>=0.12",
]

[project.scripts]
halal-filter = "halal_filter.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --- Tell setuptools exactly what to package ---
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["halal_filter*"]     # only the package
exclude = ["data*", "out*", "tests*"]  # ignore these folders

# If you later want to ship non-code files, list them here.
[tool.setuptools.package-data]
halal_filter = []
