[project]
name = "halal-filter"
version = "0.1.0"
description = "Personal-use halal stock screener (industry + ratios + CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "yfinance>=0.2.40",
  "typer>=0.12",
  "requests>=2.31",   # <- add this
]

[project.scripts]
halal-filter = "halal_filter.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["halal_filter*"]
exclude = ["data*", "out*", "tests*"]

[tool.setuptools.package-data]
halal_filter = []
